tests/fixtures/invalid/bytes_lt_float.py
# Cannot compare with < Bytes and Float
x: bool = b"hello" < 1.0
